--- a/myShuttle-aks.yaml
+++ b/myShuttle-aks.yaml
@@ -122,7 +122,7 @@ kind: Service
 
 metadata:
 
-  name: mhc-front
+  name: myshuttle-front
 
 spec:
 
@@ -133,4 +133,4 @@ spec:
   - port: 80
 
   selector:
-    app: mhc-front
+    app: myshuttle-front
