--- a/myShuttle-aks.yaml
+++ b/myShuttle-aks.yaml
@@ -90,7 +90,7 @@ spec:
 
       - name: myshuttle-front
 
-        image: containerregistryterraform.azurecr.io/web:latest
+        image: myshuttelacr.azurecr.io/web:latest
 
         imagePullPolicy: Always
 
