--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: web
     build:
       context: .
-      dockerfile: ./src/Dockerfile2
+      dockerfile: ./src/Dockerfile
     depends_on:
       - db
     ports: 
