--- a/src/Dockerfile2
+++ b/src/Dockerfile2
@@ -2,4 +2,4 @@ FROM tomcat:8.0
 
 EXPOSE 8080
 RUN rm -fr /usr/local/tomcat/webapps/ROOT
-COPY ./target/myshuttledev.war /usr/local/tomcat/webapps/myshuttledev.war
+COPY target /usr/local/tomcat/webapps/ROOT
